fix possitioning issue // button is not visible when using smaller screen

--- a/advanced-html-css/animation/02-pop-up/style.css
+++ b/advanced-html-css/animation/02-pop-up/style.css
@@ -34,13 +34,12 @@ button {
   position: fixed;
   top: 45%;
   left: 50%;
-  width: 40%;
   transform-origin: center;
-  transform: translate(-50%, -60%);
+  transform: translate(-50%, -100%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
-  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+  transition: transform 0.3s ease-out, opacity 0.3s ease;
 }
 
 .popup-modal p {
